--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -95,6 +95,9 @@
 	
 		\input{appendix/asymm-ppa}
 
+	\subsection{Our Hash Funtions in Asymmetric Groups}
+		
+		\input{appendix/asymm-hash}
 
 	\subsection{Ring Signature in Asymmetric groups}
 
