--- a/preamble.tex
+++ b/preamble.tex
@@ -115,6 +115,7 @@
 
 \newcommand{\skermdh}{\ensuremath{\mathsf{SKerMDH}}}
 \newcommand{\kermdh}{\ensuremath{\mathsf{KerMDH}}}
+\newcommand{\akermdh}{\ensuremath{\mathsf{aKerMDH}}}
 
 \newcommand{\KG}{\mathsf{KeyGen}}
 \newcommand{\GS}{{\mathsf{GS}}}
