--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -82,32 +82,32 @@
 \bibliographystyle{abbrv}
 \bibliography{cryptobib/abbrev2,cryptobib/crypto,manualbib}
 
-\appendix
-
-\section{Our construction in Asymmetric Groups}
-
-	\input{appendix/asymm}
-
-	\subsection{Asymmetric Bilinear Groups}
-		\input{appendix/asymm-groups}
-
-	\subsection{The Permutation Pairing Assumption in Asymmetric Groups} \label{sec:aPPA}
-	
-		\input{appendix/asymm-ppa}
-
-	\subsection{Our Hash Funtions in Asymmetric Groups}
-		
-		\input{appendix/asymm-hash}
-
-	\subsection{Ring Signature in Asymmetric groups}
-
-		\subsubsection{Boneh-Boyen Signatures in Asymmetric Groups}
-
-		\input{appendix/asymm-bbs}
-
-		\subsubsection{Our construction}
-
-		\input{appendix/asymm-rs}
+%\appendix
+%
+%\section{Our construction in Asymmetric Groups}
+%
+%	\input{appendix/asymm}
+%
+%	\subsection{Asymmetric Bilinear Groups}
+%		\input{appendix/asymm-groups}
+%
+%	\subsection{The Permutation Pairing Assumption in Asymmetric Groups} \label{sec:aPPA}
+%	
+%		\input{appendix/asymm-ppa}
+%
+%	\subsection{Our Hash Funtions in Asymmetric Groups}
+%		
+%		\input{appendix/asymm-hash}
+%
+%	\subsection{Ring Signature in Asymmetric groups}
+%
+%		\subsubsection{Boneh-Boyen Signatures in Asymmetric Groups}
+%
+%		\input{appendix/asymm-bbs}
+%
+%		\subsubsection{Our construction}
+%
+%		\input{appendix/asymm-rs}
 
 \end{document}
 
