--- a/prelim/assumptions.tex
+++ b/prelim/assumptions.tex
@@ -1,4 +1,4 @@
-We will use the permutation pairing assumption, introduced by Groth and Lu.
+We will use the permutation pairing assumption introduced by Groth and Lu.
 \begin{definition}[Permutation Pairing Assumption \cite{AC:GroLu07}]\label{def:ppa}
 Let $\mathcal{Q}_{m}=\underbrace{\mathcal{Q}\cat\ldots\cat\mathcal{Q}}_{m\text{ times}}$, where concatenation of  distributions is defined in the natural way and 
 $$\mathcal{Q}: \vecb{a}=\pmatri{x\\x^2},\quad x\gets\Z_q.$$
@@ -15,7 +15,7 @@ $$
 where $[\matr{Z}]=[\vecb{z}_1\cat\cdots\cat\vecb{z}_m], [\matr{A}]=[\vecb{a}_1\cat\cdots\cat\vecb{a}_m]\in\GG^{2\times m}$,
 is negligible in $\lambda$.
 \end{definition}
-Groth and Lu proved the hardness of the permutation pairing assumption is generic bilinear groups. 
+Groth and Lu proved the hardness of the permutation pairing assumption is generic bilinear groups \cite{AC:GroLu07}. 
 
 We recall the definition of the decisional linear assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
 
