--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -1,7 +1,7 @@
 \subsubsection{Extending our technique.}
 A natural question is if this technique can be applied once again. That is, to compute a $\Theta(\sqrt[4]{n})$  proof, compute commitments to an element from $H=\{h(A_1),\ldots,h(A_{n^{3/4}})\}$ and
 $G=\allowbreak\{
-	g_{[\matr{A_1}]}
+	g_{[\matr{A}_1]}
 		([
 			\vecb{\kappa}_1]),
 	\ldots,\allowbreak
@@ -13,7 +13,7 @@ and then prove that they belong to the respective sets with our set-membership p
 
 
 \subsubsection{Erasures.}
-In the security proof we need to embed a random preimage $A=\{[\vecb{a}_1],\ldots,\allowbreak [\vecb{a}_{q_{\mathsf{gen}}}]\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\vecb{a}_i$ (the discrete logs of $[\vecb{a}_i]$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $[\vecb{a}_i]=([a_{i,1}],[a_{i,1}^2])^\top$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures. That is, after sampling $\vecb{a}$ and computing $[\vecb{a}]$, the key generation algorithm erases $\vecb{a}$.
+In the security proof we need to embed a random preimage $A=\{[\vecb{a}_1],\ldots,\allowbreak [\vecb{a}_{q_{\mathsf{gen}}}]\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\vecb{a}_i$ (the discrete logs of $[\vecb{a}_i]$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $[\vecb{a}_i]=([a_{i,1}],[a_{i,1}^2])^\top$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures: after sampling $\vecb{a}_i$ and computing $[\vecb{a}_i]$, the key generation algorithm erases $\vecb{a}_i$.
 
 \subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``$[\vecb{a}'_1],\ldots,[\vecb{a}'_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'', i.e.~$\{[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\}=\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$, can be showed with a proof that $[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$ and a proof that $\sum_{i=1}^m [\vecb{a}'_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $\Theta(m)$ proof that $[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\in\{[\vecb{a}_1],\ldots\allowbreak,[\vecb{a}_m]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
 
